--- a/404.njk
+++ b/404.njk
@@ -2,17 +2,10 @@
 layout: layouts/base.njk
 title: "Page not found"
 ---
-
-<div class="">
-    <div class="left"></div>
-    <div class="post-box">
-        <section class="centered-index">
-            <div class="error-block">
-                <h1>Page Not Found</h1>
-                <p>Oops! The page you are looking for could not be found.</p>
-                <a href="/">Go back to homepage</a>
-            </div>
-        </section>
+<div class="centered-index">
+    <div class="error-block">
+        <h1>Page Not Found</h1>
+        <p>Oops! The page you are looking for could not be found.</p>
+        <a href="/">Go back to homepage</a>
     </div>
-    <div class="right"></div>
 </div>
