Moving site out of ugly mode

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
             <div class="left"></div>
             <div class="post-box">
                 {{ content | safe }}
-                <div class="footer">Awful Design by @keyboardcrunch</div>
+                <div class="footer">Design by @keyboardcrunch</div>
             </div>
             </div class="right"></div>
         </div>
