--- a/index.njk
+++ b/index.njk
@@ -37,7 +37,7 @@ layout: layouts/base.njk
 <div class="post-section">
     <!-- Blog Posts -->
     <div class="column">
-        <h2><a href="/posts/">Posts</a><a class="rss-icon" href="../posts/feed.rss">&nbsp</a></h2>
+        <h2><a href="/posts/">Posts</a></h2>
         <ul>
             {% for mypost in search.pages("type=blogpost", "date=desc", 10) %}
                 <li><a href="{{ mypost.url }}">{{ mypost.title }}</a></li>
@@ -48,7 +48,7 @@ layout: layouts/base.njk
     <!-- Micro-blogging -->
     <!-- May want to list date - shortname (meta), because title could be long-->
     <div class="column">
-        <h2><a href="/thoughts/">Thoughts</a><a class="rss-icon" href="../thoughts/feed.rss">&nbsp</a></h2> 
+        <h2><a href="/thoughts/">Thoughts</a></h2> 
         <ul>
             {% for thought in search.pages("type=thought", "date=desc", 10) %}
                 <li><a href="{{ thought.url }}">{{ thought.date | date('DATE') }} {% if thought.short_title %} - {{ thought.short_title }}{% endif %}</a></li>
