--- a/assets/main.css
+++ b/assets/main.css
@@ -31,6 +31,11 @@ li a {
   text-decoration: none;
 }
 
+h2 a {
+  text-decoration: none;
+  color: black;
+}
+
 img {
   max-width: 100%;
 }
@@ -140,6 +145,10 @@ a.rss-icon {
     text-decoration: none;
     color: rgb(93, 187, 224);
     background-color: transparent;
+  }
+
+  h2 a {
+    color: white;
   }
 
   a {
