more theme tweaks for mobile

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,16 +11,14 @@
     {% endif %}
     </head>
     <body>
-        <div class="header">
-            <a href="/"><h2>keyboardcrunch</h2></a>
-        </div>
         <div>
-            <div class="left"></div>
-            <div class="post-box">
+            <div class="container-center">
+                <div class="header">
+                    <a href="/"><h2>keyboardcrunch</h2></a>
+                </div>
                 {{ content | safe }}
                 <div class="footer">Design by @keyboardcrunch</div>
             </div>
-            </div class="right"></div>
         </div>
     </body>
 </html>
