--- a/index.njk
+++ b/index.njk
@@ -4,8 +4,9 @@ layout: layouts/base.njk
 
 <div class="about-section">
     <!-- About Me -->
+    <h2 class="about-header">About Me</h2>
     <div class="about-text">
-        <h2 class="">About Me</h2>
+        
         <p>
             For the last 7+ years I've been a security engineer. My primary focus has been the management of endpoint security tooling, 
             detection engineering, desktop software and SaaS reviews, and some "light" adversary emulation work.
@@ -37,7 +38,7 @@ layout: layouts/base.njk
 <div class="post-section">
     <!-- Blog Posts -->
     <div class="column">
-        <h2><a href="/posts/">Posts</a></h2>
+        <h2><a href="/posts/">Recent Posts</a></h2>
         <ul>
             {% for mypost in search.pages("type=blogpost", "date=desc", 10) %}
                 <li><a href="{{ mypost.url }}">{{ mypost.title }}</a></li>
@@ -47,7 +48,7 @@ layout: layouts/base.njk
 
     <!-- Micro-blogging -->
     <div class="column">
-        <h2><a href="/thoughts/">Thoughts</a></h2> 
+        <h2><a href="/thoughts/">Recent Thoughts</a></h2> 
         <ul>
             {% for thought in search.pages("type=thought", "date=desc", 10) %}
                 <li><a href="{{ thought.url }}">{{ thought.date | date('DATE') }} {% if thought.short_title %} - {{ thought.short_title }}{% endif %}</a></li>
