reformatted top end

--- a/index.njk
+++ b/index.njk
@@ -6,32 +6,36 @@ layout: layouts/base.njk
     <!-- About Me -->
     <h2 class="about-header">About Me</h2>
     <div class="about-text">
-        
         <p>
             For the last 7+ years I've been a security engineer. My primary focus has been the management of endpoint security tooling, 
-            detection engineering, desktop software and SaaS reviews, and some "light" adversary emulation work.
+            detection engineering, desktop software and SaaS reviews, and some "light" adversary emulation work. I enjoy the detection
+            and threat hunting (defender) side of the job far more than the attacker side, probably because of all the odd application
+            behaviors you discover along the way (without the effort of reverse engineering).
         </p>
         <p>
-            I'm currently working at SpaceX but previously I was a security engineer at Woodforest National Bank (11 years!) and <i>the</i> system 
-            administrator for a small start-up building an encrypted file sharing and chat application.
+            I'm currently working at SpaceX for the last 2 years but previously I was a security engineer at Woodforest National Bank 
+            (11 years!) and <i>the</i> system administrator for a small start-up building an anonymous file sharing and chat application.
         </p>
-        <p class="">
-            My interests outside of work are varied and I'm never without a project.
-            <ul>
-                {% for interest in interests %}
-                    <li>{{ interest.topic }}</li>
+        <div class=post-section>
+            <!-- interests -->
+            <div class="about-column">
+                <p><b>Interests and Hobbies:</b></p>
+                <ul>
+                    {% for interest in interests %}
+                        <li>{{ interest.topic }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <!-- social media -->
+            <div class="about-column">
+                <p class="">You can find me on the following platforms:</p>
+                <ul>
+                {% for social in socials %}
+                    <li><a rel="me" href="{{ social.link }}">{{ social.name }}</a></li>
                 {% endfor %}
-            </ul>
-        <p>
-    </div>
-    <!-- Links -->
-    <div class="about-links">
-        <p class="">You can find me on the following platforms:</p>
-        <ul>
-        {% for social in socials %}
-            <li><a rel="me" href="{{ social.link }}">{{ social.name }}</a></li>
-        {% endfor %}
-        </ul>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
