--- a/index.njk
+++ b/index.njk
@@ -59,16 +59,11 @@ layout: layouts/base.njk
             {% endfor %}
         </ul>
     </div>
+</div>
 
-    <!-- Good Reads -->
-    {% if bookmarks != undefined %}
-    <div class="column">
+<div class="post-section">
+    <div class=column id="jsreads">
         <h2><a>Recent Reads</a></h2>
-        <ul>
-            {% for bookmark in bookmarks %}
-                <li><a href="{{ bookmark.url }}">{{ bookmark.title }}</a></li>
-            {% endfor %}
-        </ul>
+        <ul id="linkshare"></ul>
     </div>
-    {% endif %}
 </div>
