--- a/index.njk
+++ b/index.njk
@@ -60,16 +60,9 @@ layout: layouts/base.njk
         </ul>
     </div>
 </div>
-<!-- to be replaced with Deno.kv linkshare (TBD) -->
-{% if bookmarks != undefined %}
 <div class="post-section">
-    <div class=column id="">
+    <div class="column" id="jsreads">
         <h2><a>Recent Reads</a></h2>
-        <ul id="">
-            {% for bookmark in bookmarks %}
-                <li><a href="{{ bookmark.url }}">{{ bookmark.title }}</a></li>
-            {% endfor %}
-        </ul>
+        <ul id="linkshare"></ul>
     </div>
 </div>
-{% endif %}
