--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,7 +19,7 @@
 
         <script>
             async function query() {
-                const resp = await fetch("./linkshare?count=20");
+                const resp = await fetch("./linkshare?count=15");
                 const data = await resp.json();
                 var table = document.getElementById("linkshare");
                 var rows = '';
@@ -29,7 +29,7 @@
                 });
                 table.innerHTML = rows;
             }
-            // query();
+            query();
         </script>
     </head>
     <body>
