--- a/index.njk
+++ b/index.njk
@@ -62,6 +62,7 @@ layout: layouts/base.njk
 </div>
 <div class="post-section">
     <div class="column" id="jsreads">
+        <script>query_linkshare()</script>
         <h2><a>Recent Reads</a></h2>
         <ul id="linkshare"></ul>
     </div>
