Updated and rebuilt

--- a/index.njk
+++ b/index.njk
@@ -7,13 +7,13 @@ layout: layouts/base.njk
     <h2 class="about-header">About Me</h2>
     <div class="about-text">
         <p>
-            For the last 7+ years I've been a security engineer. My primary focus has been the management of endpoint security tooling, 
+            I've been career focused on endpoint security since 2016, primarily the management of endpoint security tooling, 
             detection engineering, desktop software and SaaS reviews, and some "light" adversary emulation work. I enjoy the detection
             and threat hunting (defender) side of the job far more than the attacker side, probably because of all the odd application
             behaviors you discover along the way (without the effort of reverse engineering).
         </p>
         <p>
-            I'm currently working at SpaceX for the last 2 years but previously I was a security engineer at Woodforest National Bank 
+            I've been working at SpaceX since 2021, and previously I was a security engineer at Woodforest National Bank 
             (11 years!) and <i>the</i> system administrator for a small start-up building an anonymous file sharing and chat application.
         </p>
         <div class=post-section>
