simplified... and fixed EVERYTHING

--- a/404.njk
+++ b/404.njk
@@ -1,11 +1,12 @@
 ---
 layout: layouts/base.njk
+url: /404/index.html
 title: "Page not found"
 ---
 <div class="centered-index">
     <div class="error-block">
         <h1>Page Not Found</h1>
-        <p>Oops! The page you are looking for could not be found.</p>
-        <a href="/">Go back to homepage</a>
+        <h2>Oops! Not sure how you got here but you can always go back.</h2>
+        <a href="" onclick="history.back()">Go back</a>
     </div>
 </div>
