--- a/_includes/layouts/paginate.njk
+++ b/_includes/layouts/paginate.njk
@@ -1,9 +1,9 @@
 ---
-layout: layouts/base.njk
+layout: ./base.njk
 ---
 
 {% set postslist = results %}
-{% include "templates/postlist.njk" %}
+{% include "templates/post-list.njk" %}
 
 
 <nav class="post-navigation">
